<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidCloud</string>
    <string name="action_settings">设置</string>
    <string name="action_help">帮助</string>
    <string name="action_set_base_keys">设置本地密码</string>
    <string name="base_key_alert_title">请勿重复设置！</string>
    <string name="base_key_hint">输入8位字符</string>
    <string name="base_key_hint_confirm">再次输入本地密码</string>
    <string name="base_key_conflict">密码不一致或者为空，请重新输入！</string>
    <string name="username_label">用户名：</string>
    <string name="password_label">密码：</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="confirm_password_hint">请确认密码</string>
    <string name="email_label">邮箱：</string>
    <string name="email_hint">请输入邮箱地址</string>
    <string name="confirm_password_label">确认密码：</string>
    <string name="remember_me">记住</string>
    <string name="login_success">登录成功！</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_fail">验证失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="email_format_error">邮箱格式错误，请重新输入！</string>
    <string name="network_fail">登录失败，请检查网络连接！</string>
    <string name="authorize_fail">登录失败，请输入正确的用户名和密码！</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="email_empty">邮箱不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="password_not_the_same">两次输入的密码不一致</string>
    <string name="login">登录</string>
    <string name="waiting">登录中，请稍候……</string>
    <string name="logout">退出</string>
    <string name="register">注册</string>
    <string name="reset">重置</string>
    <string name="data_eigenvalues">获取</string>
    <string name="data_eigenvalues_label">数据特征值</string>
    <string name="keyword_label">关键字：</string>
    <string name="keyword_hint">请输入搜索关键字！</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果：</string>
    <string name="keyword_null">输入内容不能为空！</string>
    <string name="result_null">搜索结果为空！</string>
    <string name="back_to_sdcard">返回SD卡目录</string>
    <string name="back_to_parent">返回上一层</string>
    <string name="file_cannot_read_alert_title">文件不可读！</string>
    <string name="keyword_cannot_null_alert_title">关键字不能为空！</string>
    <string name="search_result_is_null_alert_title">搜索结果为空！</string>
    <string name="file_info_upload_fail">上传文件信息失败！</string>
    <string name="file_info_upload_succeed">上传文件信息成功！</string>
    <string name="file_upload_succeed">文件上传成功！</string>
    <string name="file_upload_fail">文件上传失败！</string>
    <string name="help">使用帮助：\n1.点击文件，设置加密级别，获取加密密钥，加密文件，计算文件特征值并存储，选择应用存储文件。\n2.长按文件，解密文件。\n\n</string>
    <string name="upload_file_info">上传文件信息</string>
    <string name="wait">请稍候……</string>
    <string name="encrypt_level_title">请设置密级！</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>
    <string name="apps_choice">请选择应用！</string>
    <string name="can_not_read_sdcard">无法读写SD卡！</string>
    <string name="decrypt_fail">文件已经被损坏！</string>
    <string name="decrypt_succeed">文件解密成功！</string>
    <string name="encrypt_fail">加密文件失败！</string>
    <string name="encrypt_succeed">加密文件成功！</string>
    <string name="base_key_success">保存本地密码成功！</string>
    <string name="apk_downloaded">新下载了App</string>
    <string name="app_validating">请稍候，应用正在验证……</string>
    <string name="app_passed">验证通过</string>
    <string name="app_failed">验证失败</string>
    <string name="app_validate_title">应用验证</string>
    <string name="click_error">请点击按钮进行操作</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="btn_delete">删除</string>
    <string name="btn_reserve">保留</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="action_show_contacts">联系人操作</string>
    <string name="action_show_messages">短信操作</string>
    <string name="encrypt_directory">EncryptedDir</string>
    <string name="decrypt_directory">DecryptedDir</string>
    <string name="sms_textview">短信操作</string>
    <string name="backup_sms">备份</string>
    <string name="recover_sms">恢复</string>
    <string name="title_activity_choose_disk">ChooseDiskActivity</string>
    <string name="choose_disk">选择网盘</string>
    <string name="disk_kuaipan">快盘</string>
    <string name="disk_openstack">OpenStack</string>
    <string name="disk_weiyun">微云</string>
    <string name="disk_dropbox">DropBox</string>
    <string name="disk_360">360云盘</string>
    <string name="disk_115">115网盘</string>
    <string name="disk_baidu">百度云盘</string>
    <string name="set_level">设置级别</string>
    <string name="upload">上传</string>
    <string name="set_level_upload">设置级别并上传</string>
    <string name="integrity_check">完整性检验</string>
    <string name="decrypt">解密</string>
    <string name="title_activity_set_encrypt_level">SetEncryptLevelActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="set_level_ok">设置加密级别成功！</string>
    <string name="set_level_cancel">设置加密级别取消！</string>
    <string name="no_default_level">没有默认级别，请长按设置级别！</string>
    <string name="remote_file_path_label">云盘路径：</string>
    <string name="downloading">下载中…</string>
    <string name="uploading">上传中…</string>
    <string name="ok">确定</string>
    <string name="upload_failure_title">上传失败</string>
    <string name="download_failure_title">下载失败</string>
    <string name="unauthorized">"未授权！"</string>
    <string name="get_user_info_failed">获取账号信息失败</string>
    <string name="download">下载</string>
    <string name="fileinfo">文件信息</string>
    <string name="exit">退出</string>
    <string name="upload_success">上传成功！</string>
    <string name="upload_canceled">上传取消！</string>
    <string name="file_path_empty">文件路径为空，请检查操作！</string>
    <string name="empty_file_path">路径为空！</string>
    <string name="remote_file_path">/我的应用/AndroidCloud/</string>

</resources>