<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical" >

    <!-- User name label -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textColor="@android:color/black" >
    </TextView>

    <!-- User name EditText -->

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textColor="@android:color/black" >
    </EditText>

    <!-- Email label -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@android:color/black" >
    </TextView>

    <!-- Email address -->

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black" >
    </EditText>

    <!-- Password label -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:text="@string/password_label"
        android:textColor="@android:color/black" >
    </TextView>

    <!-- Password EditText -->

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/black" >
    </EditText>

    <!-- Confirm password label -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_label"
        android:textColor="@android:color/black" >
    </TextView>

    <!-- Confirm password EditText -->

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/black" >
    </EditText>

    <!-- Buttons -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <!-- Register Button -->

        <Button
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@android:color/black" >
        </Button>

        <!-- Reset Button -->

        <Button
            android:id="@+id/reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="@android:color/black" >
        </Button>
    </LinearLayout>

</LinearLayout>