<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/green"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >

        <!-- The dialog icon. -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_info" />
        <!-- Dialog Title. -->

        <TextView
            android:id="@+id/base_key_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/action_set_base_keys"
            android:textSize="@dimen/title" />
        <!-- Dialog Rating. -->
    </LinearLayout>
    <!-- Base key EditText. -->

    <EditText
        android:id="@+id/edittext_base_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/base_key_hint"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textSize="@dimen/text_size" />
    <!-- Confirm base key EditText. -->

    <EditText
        android:id="@+id/edittext_base_key_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/base_key_hint_confirm"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textSize="@dimen/text_size" />
    <!-- Dialog Button. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <!-- Submit button. -->

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textSize="@dimen/btn_text" />
        <!-- Cancel button. -->

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/btn_text" />
    </LinearLayout>

</LinearLayout>