<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:gravity="center_horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Sms operation. -->

    <TextView
        android:id="@+id/sms_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sms_textview"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/backupSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sms_textview"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/backup_sms"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/recoverSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/backupSms"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_toRightOf="@id/backupSms"
        android:text="@string/recover_sms"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

</RelativeLayout>