<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/netdisk_chooser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginRight="@dimen/layout_margin_right"
        android:gravity="center_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:gravity="center_horizontal" >

            <!-- The title. -->

            <TextView
                android:id="@+id/choose_disk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_disk"
                android:textColor="@color/black"
                android:textSize="@dimen/title" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:gravity="center_horizontal" >

            <!-- Kuaipan disk button. -->

            <Button
                android:id="@+id/btn_kuaipan"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/disk_kuaipan"
                android:text="@string/disk_kuaipan" />
            <!-- The openstack button. -->

            <Button
                android:id="@+id/btn_openstack"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/disk_openstack"
                android:text="@string/disk_openstack" />
            <!-- The weiyun button. -->

            <Button
                android:id="@+id/btn_weiyun"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/disk_weiyun"
                android:text="@string/disk_weiyun" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:gravity="center_horizontal" >

            <!-- The dropbox button. -->

            <Button
                android:id="@+id/btn_dropbox"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/disk_dropbox"
                android:text="@string/disk_dropbox" />

            <!-- The 360 button. -->

            <Button
                android:id="@+id/btn_360"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/disk_360"
                android:text="@string/disk_360" />
            <!-- The 360 button. -->

            <Button
                android:id="@+id/btn_baidu"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/disk_baidu"
                android:text="@string/disk_baidu" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:gravity="left"
            android:weightSum="3" >

            <!-- The 115 button. -->

            <Button
                android:id="@+id/btn_115"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/disk_115"
                android:text="@string/disk_115" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >
        </TableRow>
    </TableLayout>
    <!-- Kuaipan disk view. -->

    <LinearLayout
        android:id="@+id/kuaipan_disk_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="6" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_text" />
        <!-- The remote file path. -->

        <LinearLayout
            android:id="@+id/remote_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/remote_disk_file_path_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuaipan_remote_file_path"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/remote_disk_file_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="/sfsf "
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <ListView
            android:id="@+id/remote_disk_files"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_weight="5" >
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_sumbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ok"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/btn_cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>