<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp" >

    <!-- Dialog Title. -->

    <TextView
        android:id="@+id/rank_dialog_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:text="@string/encrypt_level_title"
        android:textSize="24sp" />
    <!-- Dialog Rating. -->

    <RatingBar
        android:id="@+id/dialog_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="1"
        android:stepSize="1.0" />
    <!-- Dialog Button. -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <!-- Submit button. -->

        <Button
            android:id="@+id/rank_dialog_button_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/submit"
            android:textColor="#FFF8C6"
            android:textSize="20sp" />
        <!-- Cancel button. -->

        <Button
            android:id="@+id/rank_dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/cancel"
            android:textColor="#FFF8C6"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>